--- a/NewNav.css
+++ b/NewNav.css
@@ -6,13 +6,20 @@
   --text-color: #ffffff;
   --default-font-size: 1rem;
   --default-line-height: 1.5;
+  --default-text-color: #282c3f;
 }
+
+/* body bg color?
+  
+*/
 
 body {
   font-family: var(--default-font-family);
   font-size: var(--default-font-size);
   font-weight: var(--default-font-weight);
   line-height: var(--default-line-height);
+  color: var(--default-text-color);
+  
 }
 
 * {
@@ -23,6 +30,7 @@ body {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 ul {
@@ -34,40 +42,52 @@ img {
   height: 100%;
 }
 
+.page-container{
+  display: flex;
+  flex-direction: column;
+}
+
 .HeaderContainer {
   display: flex;
-  padding: 0.7rem 0%;
+  /* position: fixed; */
+  z-index: 2;
+  /* padding: 0.7rem 0; */
+  padding: 0.7rem 4%;
+  justify-content: space-between;
+  background-color: #ff1493;
   /* gap: 3rem; */
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
 }
 
 .ImageContainer {
   width: 53px;
-  display: flex;
+  /* display: flex; */
+  cursor: pointer;
+  /* border: 1px solid red; */
 }
 
 .NavItemsList {
   display: flex;
   gap: 1.3rem;
   align-items: center;
+  /* border: 1px solid red; */
+  height: 100%;
 }
 
-.NavItems {
-  display: flex;
-  align-items: center;
-}
+/* .NavItems {
+  /* display: flex;
+  align-items: center; */
+/* border: 1px solid green; */
+
 .New {
-  color: deeppink;
+  color: #ff1493;
 }
 
 .Anchor {
   color: #282c3f;
   font-weight: 800;
-  font-size: 13px;
-}
-
-.Anchor {
-  padding: 0.5rem 10px;
+  font-size: 0.8rem;
+  padding: 0.5rem 0.6rem;
   border-radius: 6px;
 }
 
@@ -77,24 +97,32 @@ img {
 
 .Search {
   display: flex;
-  background-color: #f5f5f6;
+  /* background-color: #f5f5f6;
   align-items: center;
-  color: gray;
+  color value in variable 
+  color: #808080;
   gap: 0.8rem;
-  padding: 0px 0px 0px 1rem;
+  padding-left:1rem;
   border-radius: 10px;
+  border: 1px solid red; */
+  border: 1px solid red;
 }
 
-#Input {
-  display: flex;
-  width:30rem;
-  background-color: #f5f5f6;
-  border: 0;
+.search-input {
+  /* display: flex;
+  border: 5px solid blue;
+
+  max-width: 30rem;
+  background-color: #f5f5f6; */
+  /* border: 0; */
+  width: 100%;
+  border: 5px solid blue;
 }
 
 .ContainerRight {
   display: flex;
-  justify-content: flex-end;
+  border: 1px solid red;
+  /* justify-content: flex-end; */
   gap: 1rem;
 }
 
@@ -102,4 +130,52 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Main Content */
+
+.main-container {
+  position: relative;
+  z-index: 1;
+}
+
+.heading-cat{
+  display: flex;
+  justify-content: center;
+  color: #ff1493;
+}
+
+.categoty-item-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.items {
+  width: 16rem;
+  cursor: pointer;
+}
+
+.heading-offer{
+  display: flex;
+  justify-content: center;
+  color: #ff1493;
+
+}
+
+.offer-items-container{
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
+}
+
+.offer-items{
+  width: 20rem;
+  cursor: pointer;
+}
+
+.footer{
+  font-size: 10rem;
+  display: flex;
+  justify-content: center;
 }
